@@ -10,7 +10,7 @@
 #define  __VERSION_MAJOR   "2"
 #define  __VERSION_MINOR   "5"
 #define  __VERSION_PATCH   "0"
-#define  __VERSION_LABEL   "beta1"
+#define  __VERSION_LABEL   " "
 
 
 
