@@ -118,6 +118,7 @@
    PUBLIC ::  ovp_unit, space_unit, wan_unit, ham_unit, sgm_unit 
    PUBLIC ::  aux_unit, aux1_unit, aux2_unit, aux3_unit, aux4_unit, aux5_unit
    PUBLIC ::  save_unit, log_unit
+   PUBLIC ::  etsf_io_version_min
 
    PUBLIC ::  prefix, postfix, work_dir, title, pseudo_dir
    PUBLIC ::  alloc
