@@ -26,11 +26,11 @@
 #
 
 QE_BIN=~/espresso-5.0.2/bin
-ABINIT_BIN=
+ABINIT_BIN=~/codes/abinit-7.6.3/built/src/98_main/
 #
 TMPDIR=/scratch/ferretti/want
 
-PARA_PREFIX="mpiexec -np 6"
+#PARA_PREFIX="mpiexec -np 6"
 OMP_NUM_THREADS=1
 PARA_POSTFIX= 
 
