@@ -26,7 +26,10 @@ ecut  9.0                     # Kinetic energy cut-off, in Hartree
 nstep 3000                    # Maximum number of SCF cycles
 
 # global IO options
-accesswff 3
+accesswff 1
+
+# avoid kpt checks
+chksymbreak 0
 
 # Step 1: determine the ground state
 iscf1    3                    # Algorithm: Anderson mixing of the potential
